Fix dropdown z-index
This fixes the dropdown being behind content on the schedule and timeline page

--- a/frontend/global/global.css
+++ b/frontend/global/global.css
@@ -218,6 +218,7 @@ nav.abs {
 	top: 0;
 	left: 0;
 	right: 0;
+	z-index: 60;
 }
 
 @-webkit-keyframes slide_out_top {
